Updated unit tests for product sheet